--- a/lab/B1_1_Toan_B1704780/local.properties
+++ b/lab/B1_1_Toan_B1704780/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Oct 09 07:53:26 ICT 2020
-sdk.dir=C\:\\Android\\sdk
+#Fri Oct 16 14:07:54 ICT 2020
+sdk.dir=C\:\\Users\\Admin\\AppData\\Local\\Android\\Sdk
