--- a/lab/Bai_9_Toan_B1704780/app/src/main/AndroidManifest.xml
+++ b/lab/Bai_9_Toan_B1704780/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.bai_9_toan_b1704780">
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_CALL_LOG" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -9,6 +12,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Bai_9_Toan_B1704780">
+        <activity android:name=".DisplayPictureList"></activity>
+        <activity android:name=".DisplayVideoList" />
+        <activity android:name=".DisplayAudioList" />
+        <activity android:name=".MediaContent" />
+        <activity android:name=".DisplayAllCallLog" />
+        <activity android:name=".DisplayAllContact" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
